crates/toml/tests/snapshots/invalid/local-datetime/no-leads.stderr
TOML parse error at line 2, column 12
  |
2 | no-leads = 1987-7-05T17:45:00
  |            ^^^^^^^^^^^^^^^^^^
invalid date, expected a two-digit month (MM)
